--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .motivational-message {
-  background-color: #ffeb3b;
+  background-color:rgb(133, 125, 60);
   color: #333;
   font-weight: bold;
   padding: 10px;
